--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,13 @@
-# Dependencies
+# dependencies
 node_modules/
 
-# Environment variables
+# env files
 .env
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# OS
+.DS_Store
